# BotGPTBackend

./: .dockerignore  .replit  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  run-python-backend.sh  start-all.sh
.github/workflows/: ci.yml
attached_assets/: Pasted--This-shows-which-parts-of-your-code-are-tested-PHASE-4-Prepare-for-GitHub-Push-Step-10-Check-Wh-1764451186274_1764451186275.txt  Pasted-Add-unit-tests-and-CI-CD-pipeline-to-my-FastAPI-bot-gpt-application-PROJECT-CONTEXT-FastAPI--1764440060524_1764440060525.txt  Pasted-Build-a-conversational-AI-backend-called-BOT-GPT-with-the-following-requirements-PROJECT-SETUP--1764433154710_1764433154711.txt  Pasted-Build-a-conversational-AI-backend-called-BOT-GPT-with-the-following-requirements-PROJECT-SETUP--1764434234671_1764434234672.txt
bot-gpt/: .env.example  README.md  bot_gpt.db  database.py  graph_workflow.py  llm_service.py  main.py  requirements.txt
client/: index.html
client/src/: index.css
client/src/components/layout/: AppSidebar.tsx  ChatArea.tsx
client/src/lib/: api.ts  mockData.ts  mockResponses.ts
client/src/pages/: chat.tsx
server/: db.ts  groq-service.ts  index.ts  python-manager.ts  routes.ts  storage.ts
shared/: schema.ts
